k8s/observability/fluentd.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: fluent-bit
  template:
    metadata:
      labels:
        app: fluent-bit
    spec:
      containers:
        - name: fluent-bit
          image: cr.fluentbit.io/fluent/fluent-bit:2.2.2
          args:
            - -i
            - tail
            - -p
            - path=/var/log/pods/*/*/*.log
            - -o
            - es
            - -p
            - host=elasticsearch
            - -p
            - port=9200
            - -p
            - index=fluent-bit
          volumeMounts:
            - name: podlogs
              mountPath: /var/log/pods
              readOnly: true
      volumes:
        - name: podlogs
          hostPath:
            path: /var/log/pods
